--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,25 @@
-body {
+/* Сбрасываем стандартные отступы и margin для всех элементов */
+* {
   margin: 0;
+  padding: 0;
+  /* Указываем, что padding и border включаются в общую ширину и высоту элемента */
+  box-sizing: border-box;
+}
+
+/* Стили для элемента body */
+body {
+  /* Задаем семейство шрифтов */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  /* Улучшаем сглаживание шрифтов */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* Задаем фоновый цвет всей страницы */
+  background-color: #f5f5f5;
 }
 
+/* Стили для элементов с классом code (может пригодиться для отображения кода) */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
